# UnityBridge

./: .gitignore  COMMANDS.ko.md  COMMANDS.md  LICENSE  NOTICE.md  README.ko.md  README.md  install.ps1  pyproject.toml
src/unity_bridge/: __init__.py  adapter.py  cli.py  client.py
src/unity_cli_native/: __init__.py  cli.py  client.py
tests/: test_client.py
unity-bridge-connector/: package.json
unity-bridge-connector/Editor/: Heartbeat.cs
unity-bridge-connector/Editor/Core/: AtomicFile.cs
unity-bridge-connector/Editor/TestRunner/: RunTests.cs  TestRunnerState.cs
unity-bridge-connector/Editor/Tools/: ExecuteCsharp.cs  RefreshUnity.cs
